Fix dashboard not showing up correctly

--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -352,4 +352,5 @@ table#filter-history-table {
 
 .card-body {
     overflow-y: auto;
+    padding: 0 !important;
 }
